install  and configure test scripts

--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "Projeto com intuito de estudos. Curso.dev",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "next dev",
     "lint:check": "prettier --check .",
-    "lint:fix": "prettier --write ."
+    "lint:fix": "prettier --write .",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
+    "jest": "^29.6.2",
     "prettier": "^3.5.3"
   },
   "dependencies": {
