--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint:check": "prettier --check .",
     "lint:fix": "prettier --write .",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watchAll"
   },
   "author": "",
   "license": "MIT",
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "next": "^15.1.8",
+    "pg": "^8.11.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   }
